tests/ui/rfcs/rfc-2632-const-trait-impl/ice-121536-const-method.stderr
error[E0379]: functions in trait impls cannot be declared const
  --> $DIR/ice-121536-const-method.rs:11:5
   |
LL |     const fn add(self) -> Vec3 {
   |     ^^^^^ functions in trait impls cannot be const
   |
help: remove the `const` ...
   |
LL -     const fn add(self) -> Vec3 {
LL +     fn add(self) -> Vec3 {
   |
help: ... and declare the impl to be const instead
   |
LL | impl const Add for Vec3 {
   |      +++++

warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/ice-121536-const-method.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0379`.
